Oppgraderte Spring Boot 3.5.7 til 4.0.3
- Spring Boot 3.5.7 → 4.0.3 med nødvendige avhengighetsendringer
- Springfox erstattet med springdoc-openapi 3.0.1
- Jackson 2 beholdes midlertidig via spring-boot-jackson2 (Jackson 3-migrering følger i neste commit)
- Hibernate 7: StaleObjectStateException-håndtering i ProsessinstansBehandler
- Kafka: deprecated APIer oppdatert
- TrailingSlashFilter: UrlHandlerFilter fra org.springframework.web.filter
- graphql-kickstart auto-konfigurasjon ekskludert
- Testkonfig: @SpykBean → @MockkSpyBean, DEFINED_PORT → RANDOM_PORT, junit-platform.properties